--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
 
     <string name="app_name">WorkingTime</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_export">Export to external SD</string>
+    <string name="action_inport">Inport from external SD</string>
     <string name="lastInStr">Last In:</string>
     <string name="balanceStr">Balance:</string>
     <string name="badgeInStr">Badge In</string>
@@ -22,5 +23,8 @@
     <string name="year">Year</string>
     <string name="ok">OK</string>
     <string name="reportTitle">Report</string>
-
+    <string name="settings">Settings</string>
+	<string name="prefMainGroup">Preferences</string>
+	<string name="prefToExternalSDTitle">Save on External SD</string>
+	<string name="prefToExternalSDDesc">Save the balance informations on the External SD</string>
 </resources>
